--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ SystemRequirements: C++11, LibTorch (https://pytorch.org)
 LinkingTo: Rcpp
 Imports:
     Rcpp, R6, withr,rlang,methods,utils,stats,magrittr,tools,coro,callr,cli,ellipsis,torch,tidyverse,stats,ggplot2,Rcpp,
-    rtracklayer,MCMCpack,mvtnorm,NMF,batch,clue,pheatmap
+    rtracklayer,MCMCpack,mvtnorm,NMF,batch,clue,pheatmap,nnet,Matrix
 RoxygenNote: 7.1.1
