made mak_m__ an exported function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(NMFinit)
 export(deviance_curve)
 export(generate_data)
 export(make_96plot)
+export(make_m__)
 export(plot_factors)
 export(runEM)
 export(tf)
