--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(init_tensorsig)
 export(make_96plot)
 export(make_m__)
 export(plot_factors)
+export(random_init)
 export(runEM)
 export(stack)
 export(tf)
